contact and about pages

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -83,7 +83,7 @@
               <a class="nav-link" href="index.html">Главная</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">О нас</a>
+              <a class="nav-link" href="about.html">О нас</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="detektor.html">Детектор лжи</a>
@@ -95,79 +95,105 @@
               <a class="nav-link" href="blog.html">Полезное</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contacts.html">Контакты</a>
+              <a class="nav-link active" href="contacts.html">Контакты</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <!-- End Navigation -->
+
     <main>
-      <!-- Start Section: About -->
-      <section id="about">
+      <!-- Start Section: Contact Info -->
+      <section id="contacts-page">
         <div class="container">
-          <div class="row">
+          <div class="row align-items-center">
             <div class="col-12 page-title">
-              <h2 class="text-center">О нас</h2>
+              <h1 class="text-center section-title">Контакты</h1>
             </div>
           </div>
+          <div class="row content align-items-center">
+            <div class="col-md-5 col-lg-4 contacts ">
+              <div class="contacts__info">
+                <ul class="list-unstyled mb-0">
+                  <li class="col-list">
+                    <img src="assets/images/geo.png" alt="icon" />
+                    <ul class="list-unstyled mb-0">
+                      <li>г. Днепр,</li>
+                      <li>пр. Александра Поля, 121</li>
+                    </ul>
+                  </li>
 
-          <div class="row main-content">
-            <div class="col-lg-8 col-xl-8 mx-auto">
-              <div class="page-cover">
-                <img
-                  class="w-100"
-                  src="assets/images/about-img.png"
-                  alt="Cover"
-                />
-              </div>
-              <div class="page-text">
-                <p>
-                  Наше агентство частных расследований «DetectivOper» проводит
-                  проверки, расследования с применением детектора лжи
-                  (полиграфа) любой сложности.
-                </p>
-                <p>
-                  Так же наше агентство предоставляет услуги детектива. Мы
-                  поможем Вам разобраться в самой запутанной ситуации.
-                </p>
-                <p>
-                  В наш бурный век информационных технологий, для большинства
-                  обывателей полиграф «детектор лжи» продолжает оставаться
-                  вымыслом фантастов, многие не подозревают о реальном
-                  существовании полиграфа. Мучаются, переживают, ищут ответы.
-                  Проходит время, многое, конечно, забывается и как-то
-                  налаживается, но есть моменты, которые продолжают мучить всю
-                  жизнь, ломают жизнь, бизнес, заставляют опускать руки.
-                </p>
+                  <li class="col-list">
+                    <img src="assets/images/phone.png" alt="icon" />
+                    <ul class="list-unstyled mb-0">
+                      <li>Номер тел.:</li>
+                      <li>
+                        <a href="tel:+38 (000) 000-00-00"
+                          >+38 (000) 000-00-00</a
+                        >
+                      </li>
+                      <li>
+                        <a href="tel:+38 (000) 000-00-00"
+                          >+38 (000) 000-00-00</a
+                        >
+                      </li>
+                    </ul>
+                  </li>
 
-                <h2>
-                  Мы работаем мобильно, оперативно и качественно, обеспечивая
-                  полную конфиденциальность и неразглашение полученной
-                  информации!
-                </h2>
-                <p>
-                  В наш бурный век информационных технологий, для большинства
-                  обывателей полиграф «детектор лжи» продолжает оставаться
-                  вымыслом фантастов, многие не подозревают о реальном
-                  существовании полиграфа. Мучаются, переживают, ищут ответы.
-                  Проходит время, многое, конечно, забывается и как-то
-                  налаживается, но есть моменты, которые продолжают мучить всю
-                  жизнь, ломают жизнь, бизнес, заставляют опускать руки
-                </p>
-                <h2>
-                  Все результаты проверок строго конфиденциальны и предъявляются
-                  только заказчику проверки!
-                </h2>
-                <h3 class="special-text">
-                  Мы осуществляем выезд специалиста в любой город Украины!
-                </h3>
+                  <li class="col-list">
+                    <img src="assets/images/mail.png" alt="icon" />
+                    <ul class="list-unstyled mb-0">
+                      <li>Email:</li>
+                      <li>
+                        <a href="mailto:11111@gmail.com">11111@gmail.com</a>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
               </div>
+            </div>
+            <div class="col-md-7 col-lg-6 offset-lg-2">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2646.8386161617027!2d35.014225715196496!3d48.44043707924871!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40dbe341b2c414db%3A0xae1949c5752583a0!2z0L_RgNC-0YHQv9C10LrRgiDQntC70LXQutGB0LDQvdC00YDQsCDQn9C-0LvRjywgMTIxLCDQlNC90ZbQv9GA0L7MgSwg0JTQvdGW0L_RgNC-0L_QtdGC0YDQvtCy0YHRjNC60LAg0L7QsdC70LDRgdGC0YwsIDQ5MDAw!5e0!3m2!1suk!2sua!4v1543572320352"
+                width="100%"
+                height="415"
+                frameborder="0"
+                style="border:0"
+                allowfullscreen
+              ></iframe>
             </div>
           </div>
         </div>
       </section>
-      <!-- End Section: About -->
+      <!-- End Section: Contact Info -->
+
+      <!-- Start Section: Additional info -->
+      <section id="additional-info">
+        <div class="container">
+          <div class="row">
+            <div class="mx-auto col-lg-10 col-xl-10 information">
+              <h3>Работаем без выходных по предварительной записи!</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa
+                commodi minus veritatis provident recusandae consequatur, earum
+                in id qui quibusdam. Lorem ipsum dolor sit amet, consectetur
+                adipisicing elit. Culpa commodi minus veritatis provident
+                recusandae consequatur, earum in id qui quibusdam.
+              </p>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Reprehenderit, iusto!
+              </p>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Reprehenderit, iusto!
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End Section: Additional info -->
 
       <!-- Start Section: youtube-form -->
       <section id="youtube-form">
