--- a/src/blog.html
+++ b/src/blog.html
@@ -83,16 +83,16 @@
               <a class="nav-link" href="index.html">Главная</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">О нас</a>
+              <a class="nav-link " href="about.html">О нас</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="detektor.html">Детектор лжи</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">Услуги</a>
+              <a class="nav-link " href="services.html">Услуги</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="blog.html">Полезное</a>
+              <a class="nav-link active" href="blog.html">Полезное</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contacts.html">Контакты</a>
@@ -103,71 +103,105 @@
     </nav>
     <!-- End Navigation -->
     <main>
-      <!-- Start Section: About -->
-      <section id="about">
+      <!-- Start Section: About Services -->
+      <section id="blog-page">
         <div class="container">
           <div class="row">
             <div class="col-12 page-title">
-              <h2 class="text-center">О нас</h2>
+              <h2 class="text-center">Полезное</h2>
             </div>
           </div>
 
-          <div class="row main-content">
-            <div class="col-lg-10 col-xl-10 mx-auto">
-              <div class="page-cover">
-                <img
-                  class="w-100"
-                  src="assets/images/about-img.png"
-                  alt="Cover"
-                />
-              </div>
-              <div class="page-text">
-                <p>
-                  Наше агентство частных расследований «DetectivOper» проводит
-                  проверки, расследования с применением детектора лжи
-                  (полиграфа) любой сложности.
-                </p>
-                <p>
-                  Так же наше агентство предоставляет услуги детектива. Мы
-                  поможем Вам разобраться в самой запутанной ситуации.
-                </p>
-                <p>
-                  В наш бурный век информационных технологий, для большинства
-                  обывателей полиграф «детектор лжи» продолжает оставаться
-                  вымыслом фантастов, многие не подозревают о реальном
-                  существовании полиграфа. Мучаются, переживают, ищут ответы.
-                  Проходит время, многое, конечно, забывается и как-то
-                  налаживается, но есть моменты, которые продолжают мучить всю
-                  жизнь, ломают жизнь, бизнес, заставляют опускать руки.
-                </p>
-
-                <h2>
-                  Мы работаем мобильно, оперативно и качественно, обеспечивая
-                  полную конфиденциальность и неразглашение полученной
-                  информации!
-                </h2>
-                <p>
-                  В наш бурный век информационных технологий, для большинства
-                  обывателей полиграф «детектор лжи» продолжает оставаться
-                  вымыслом фантастов, многие не подозревают о реальном
-                  существовании полиграфа. Мучаются, переживают, ищут ответы.
-                  Проходит время, многое, конечно, забывается и как-то
-                  налаживается, но есть моменты, которые продолжают мучить всю
-                  жизнь, ломают жизнь, бизнес, заставляют опускать руки
-                </p>
-                <h2>
-                  Все результаты проверок строго конфиденциальны и предъявляются
-                  только заказчику проверки!
-                </h2>
-                <h3 class="special-text">
-                  Мы осуществляем выезд специалиста в любой город Украины!
-                </h3>
+          <div class="row">
+            <!-- Start Item -->
+            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 blog-item">
+              <div>
+                <div class="blog-item__image">
+                  <img
+                    src="assets/images/service-image.png"
+                    alt="Service Image"
+                  />
+                </div>
+                <div class="blog-item__text text-center">
+                  <p>Название статьиНазвание статьи Название статьиНазвание</p>
+                  <a href="#">Читать далее</a>
+                </div>
               </div>
             </div>
+            <!-- End Item -->
+
+            <!-- Start Item -->
+            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 blog-item">
+              <div>
+                <div class="blog-item__image">
+                  <img
+                    src="assets/images/service-image.png"
+                    alt="Service Image"
+                  />
+                </div>
+                <div class="blog-item__text text-center">
+                  <p>Название статьиНазвание статьи Название статьиНазвание</p>
+                  <a href="#">Читать далее</a>
+                </div>
+              </div>
+            </div>
+            <!-- End Item -->
+
+            <!-- Start Item -->
+            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 blog-item">
+              <div>
+                <div class="blog-item__image">
+                  <img
+                    src="assets/images/service-image.png"
+                    alt="Service Image"
+                  />
+                </div>
+                <div class="blog-item__text text-center">
+                  <p>Название статьиНазвание статьи Название статьиНазвание</p>
+                  <a href="#">Читать далее</a>
+                </div>
+              </div>
+            </div>
+            <!-- End Item -->
+
+            <!-- Start Item -->
+            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 blog-item">
+              <div>
+                <div class="blog-item__image">
+                  <img
+                    src="assets/images/service-image.png"
+                    alt="Service Image"
+                  />
+                </div>
+                <div class="blog-item__text text-center">
+                  <p>Название статьиНазвание статьи Название статьиНазвание</p>
+                  <a href="#">Читать далее</a>
+                </div>
+              </div>
+            </div>
+            <!-- End Item -->
+
+            <!-- Start Item -->
+            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 blog-item">
+              <div>
+                <div class="blog-item__image">
+                  <img
+                    src="assets/images/service-image.png"
+                    alt="Service Image"
+                  />
+                </div>
+                <div class="blog-item__text text-center">
+                  <p>Название статьиНазвание статьи Название статьиНазвание</p>
+                  <a href="#">Читать далее</a>
+                </div>
+              </div>
+            </div>
+            <!-- End Item -->
           </div>
         </div>
+        <!-- Container end -->
       </section>
-      <!-- End Section: About -->
+      <!-- End Section: About Services -->
 
       <!-- Start Section: youtube-form -->
       <section id="youtube-form">
