change column size and font-size

--- a/src/blog.html
+++ b/src/blog.html
@@ -121,6 +121,9 @@
                     src="assets/images/service-image.png"
                     alt="Service Image"
                   />
+                  <div class="date">
+                      13.08.2018
+                  </div>
                 </div>
                 <div class="blog-item__text text-center">
                   <p>Название статьиНазвание статьи Название статьиНазвание</p>
@@ -138,6 +141,9 @@
                     src="assets/images/service-image.png"
                     alt="Service Image"
                   />
+                  <div class="date">
+                      13.08.2018
+                  </div>
                 </div>
                 <div class="blog-item__text text-center">
                   <p>Название статьиНазвание статьи Название статьиНазвание</p>
@@ -155,6 +161,9 @@
                     src="assets/images/service-image.png"
                     alt="Service Image"
                   />
+                  <div class="date">
+                      13.08.2018
+                  </div>
                 </div>
                 <div class="blog-item__text text-center">
                   <p>Название статьиНазвание статьи Название статьиНазвание</p>
@@ -172,6 +181,9 @@
                     src="assets/images/service-image.png"
                     alt="Service Image"
                   />
+                  <div class="date">
+                      13.08.2018
+                  </div>
                 </div>
                 <div class="blog-item__text text-center">
                   <p>Название статьиНазвание статьи Название статьиНазвание</p>
@@ -189,6 +201,9 @@
                     src="assets/images/service-image.png"
                     alt="Service Image"
                   />
+                  <div class="date">
+                      13.08.2018
+                  </div>
                 </div>
                 <div class="blog-item__text text-center">
                   <p>Название статьиНазвание статьи Название статьиНазвание</p>
