--- a/src/detektor.html
+++ b/src/detektor.html
@@ -86,10 +86,10 @@
               <a class="nav-link " href="about.html">О нас</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="detektor.html">Детектор лжи</a>
+              <a class="nav-link active" href="detektor.html">Детектор лжи</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="services.html">Услуги</a>
+              <a class="nav-link" href="services.html">Услуги</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="blog.html">Полезное</a>
@@ -103,25 +103,29 @@
     </nav>
     <!-- End Navigation -->
     <main>
-      <!-- Start Section: About Services -->
-      <section id="services-page">
+      <!-- Start Section: About -->
+      <section id="about">
         <div class="container">
           <div class="row">
             <div class="col-12 page-title">
-              <h2 class="text-center">Наши услуги</h2>
+              <h2 class="text-center">Детектор лжи</h2>
             </div>
           </div>
 
           <div class="row main-content">
             <div class="col-lg-10 col-xl-10 mx-auto">
+              <div class="page-cover">
+                <img
+                  class="w-100"
+                  src="assets/images/about-img.png"
+                  alt="Cover"
+                />
+              </div>
               <div class="page-text">
                 <p>
-                  Мы осуществляем деятельность в рамках законодательства,
-                  действующего на территории Украины, с целью всяческого
-                  содействия стабильности и безопасности Вашего бизнеса. Кроме
-                  того, мы помогаем с решением вопросов, которые относятся к
-                  сфере личных отношений. Наша деятельность строго
-                  конфиденциальна – нам важна наша честь и профессионализм!
+                  Наше агентство частных расследований «DetectivOper» проводит
+                  проверки, расследования с применением детектора лжи
+                  (полиграфа) любой сложности.
                 </p>
                 <p>
                   Так же наше агентство предоставляет услуги детектива. Мы
@@ -136,6 +140,12 @@
                   налаживается, но есть моменты, которые продолжают мучить всю
                   жизнь, ломают жизнь, бизнес, заставляют опускать руки.
                 </p>
+
+                <h2>
+                  Мы работаем мобильно, оперативно и качественно, обеспечивая
+                  полную конфиденциальность и неразглашение полученной
+                  информации!
+                </h2>
                 <p>
                   В наш бурный век информационных технологий, для большинства
                   обывателей полиграф «детектор лжи» продолжает оставаться
@@ -145,133 +155,19 @@
                   налаживается, но есть моменты, которые продолжают мучить всю
                   жизнь, ломают жизнь, бизнес, заставляют опускать руки
                 </p>
-                <p>
-                  В наш бурный век информационных технологий, для большинства
-                  обывателей полиграф «детектор лжи» продолжает оставаться
-                  вымыслом фантастов, многие не подозревают о реальном
-                  существовании полиграфа. Мучаются, переживают, ищут ответы.
-                  Проходит время, многое, конечно, забывается и как-то
-                  налаживается, но есть моменты, которые продолжают мучить всю
-                  жизнь, ломают жизнь, бизнес, заставляют опускать руки В наш
-                  бурный век информационных технологий, для большинства
-                  обывателей полиграф «детектор лжи» продолжает оставаться
-                  вымыслом фантастов, многие не подозревают о реальном
-                  существовании полиграфа. Мучаются, переживают, ищут ответы.
-                  Проходит время, многое, конечно, забывается и как-то
-                  налаживается, но есть моменты, которые продолжают мучить всю
-                  жизнь, ломают жизнь, бизнес, заставляют опускать руки
-                </p>
+                <h2>
+                  Все результаты проверок строго конфиденциальны и предъявляются
+                  только заказчику проверки!
+                </h2>
+                <h3 class="special-text">
+                  Мы осуществляем выезд специалиста в любой город Украины!
+                </h3>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <!-- End Section: About Services -->
-
-      <!-- Start Section: All Services -->
-      <section id="all-services">
-        <div class="container">
-          <div class="row">
-            <!-- Start Item -->
-            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 service-item">
-              <div>
-                <div class="service-item__image">
-                  <img
-                    src="assets/images/service-image.png"
-                    alt="Service Image"
-                  />
-                </div>
-                <div class="service-item__text text-center">
-                  <p>Расследования краж, хищений, мошенничества</p>
-                  <a href="#"> Узнать подробнее </a>
-                </div>
-              </div>
-            </div>
-            <!-- End Item -->
-
-            <!-- Start Item -->
-            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 service-item">
-              <div>
-                <div class="service-item__image">
-                  <img
-                    src="assets/images/service-image.png"
-                    alt="Service Image"
-                  />
-                </div>
-                <div class="service-item__text text-center">
-                  <p>
-                    Расследования краж, <br />
-                    хищений, мошенничества
-                  </p>
-                  <a href="#"> Узнать подробнее </a>
-                </div>
-              </div>
-            </div>
-            <!-- End Item -->
-
-            <!-- Start Item -->
-            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 service-item">
-              <div>
-                <div class="service-item__image">
-                  <img
-                    src="assets/images/service-image.png"
-                    alt="Service Image"
-                  />
-                </div>
-                <div class="service-item__text text-center">
-                  <p>
-                    Проверка домашнего <br />
-                    персонала
-                  </p>
-                  <a href="#"> Узнать подробнее </a>
-                </div>
-              </div>
-            </div>
-            <!-- End Item -->
-
-            <!-- Start Item -->
-            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 service-item">
-              <div>
-                <div class="service-item__image">
-                  <img
-                    src="assets/images/service-image.png"
-                    alt="Service Image"
-                  />
-                </div>
-                <div class="service-item__text text-center">
-                  <p>
-                    Выявление наркотической,<br />
-                    алкогольной зависимости
-                  </p>
-                  <a href="#"> Узнать подробнее </a>
-                </div>
-              </div>
-            </div>
-            <!-- End Item -->
-
-            <!-- Start Item -->
-            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 service-item">
-              <div>
-                <div class="service-item__image">
-                  <img
-                    src="assets/images/service-image.png"
-                    alt="Service Image"
-                  />
-                </div>
-                <div class="service-item__text text-center">
-                  <p>
-                    Кадровые <br />
-                    проверки
-                  </p>
-                  <a href="#"> Узнать подробнее </a>
-                </div>
-              </div>
-            </div>
-            <!-- End Item -->
-          </div>
-        </div>
-      </section>
-      <!-- End Section: All Services -->
+      <!-- End Section: About -->
 
       <!-- Start Section: youtube-form -->
       <section id="youtube-form">
