--- a/src/404.html
+++ b/src/404.html
@@ -282,6 +282,13 @@
     </div>
     <!-- End Modal: Записаться на прием -->
 
+    <!-- Start Thank you -->
+    <div class="thankYouMsg">
+      <i class="fa fa-check-circle" aria-hidden="true"></i>
+      <p>Спасибо за Ваше сообщение. Оно успешно отправлено.</p>
+    </div>
+    <!-- End Thank you -->
+
     <!-- Import Scripts -->
     <script src="assets/js/jquery-3.3.1.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
